<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        android:iconTint="@color/violetto"/>

    <item
        android:id="@+id/scheda_diario"
        android:icon="@drawable/baseline_form_book_24"
        android:title="@string/Scheda"
        android:iconTint="@color/violetto"/>

    <item
        android:id="@+id/profilo"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profilo"
        android:iconTint="@color/violetto"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        android:iconTint="@color/violetto"/>


</menu>